# sst

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pricing.py  production_app.py  pyproject.toml
.github/workflows/: ci.yml  sst.yml
src/sst/: cli.py  config.py  core.py  diff.py  errors.py  gen.py  governance.py  legacy.py  replay.py  schema.py  sst_schema.py  synthesizer.py  types.py
tests/: conftest.py  test_bug_fixes.py  test_cli_smoke.py  test_corrupted_baseline.py  test_cross_platform_paths.py  test_determinism_guard.py  test_diff_explainability.py  test_engine_version_break_detection.py  test_format_migration.py  test_interpreter_contract.py  test_large_scenario_performance.py  test_legacy_imports.py  test_parallel_capture_consistency.py  test_policy_canonicalization.py  test_policy_change_detection.py  test_semantic_id_collision.py  test_sst_async_capture.py  test_sst_config.py  test_sst_diff.py  test_sst_full_tool_emulation.py  test_sst_generators.py  test_sst_governance.py  test_sst_invariants.py  test_sst_meta.py  test_sst_replay.py  test_sst_verify_cli.py  test_transform_idempotence.py
tests/e2e_demo/: demo_app.py
tests/golden/: cli_verify_regression_snapshot.json  interpreter_contract_capture.json
